[package]
name = "tcp_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features =["derive"]}
serde_json = "1.0.91"
tokio = {version = "1.23.1", features = ["full"]}
futures = "0.3.25"
